@@ -1,3 +1,8 @@
+2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02846]
+	* regex.c (newRegex0): check msg
+
 2002-01-16  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02845]
@@ -1988,4 +1993,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.225 2002/01/15 18:26:13 ukai Exp $
+$Id: ChangeLog,v 1.226 2002/01/16 02:50:04 ukai Exp $
